<?xml version="1.0"?>
<package>
  <name>pronto_lcm</name>
  <version>0.0.0</version>
  <description>Description</description>
  <maintainer email="mfallon@robots.ox.ac.uk">Maurice Fallon</maintainer>
  <author email="mfallon@robots.ox.ac.uk">Maurice Fallon</author>

  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <build_depend>roslint</build_depend>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>bot_core_lcmtypes</build_depend>
  <build_depend>pcl_ros</build_depend>

  <run_depend>bot_core_lcmtypes</run_depend>
  <run_depend>pcl_ros</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export />
</package>

