<?xml version="1.0"?>
<package format="2">
  <name>pronto_vis</name>
  <version>0.0.0</version>
  <description>Description</description>
  <maintainer email="mfallon@robots.ox.ac.uk">Maurice Fallon</maintainer>
  <author email="mfallon@robots.ox.ac.uk">Maurice Fallon</author>

  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslint</build_depend>

  <depend>pcl_ros</depend>
  <depend>pronto_math</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export />
</package>

