<?xml version="1.0"?>
<package>
  <name>pronto_vis</name>
  <version>0.0.0</version>
  <description>Description</description>
  <maintainer email="mfallon@robots.ox.ac.uk">Maurice Fallon</maintainer>
  <author email="mfallon@robots.ox.ac.uk">Maurice Fallon</author>

  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pronto_math</build_depend>
  <build_depend>vs_lcmtypes</build_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>pronto_math</run_depend>
  <run_depend>vs_lcmtypes</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export />
</package>